--- a/task-3/2.md
+++ b/task-3/2.md
@@ -49,7 +49,7 @@ close(2)                                = 0
     write(1, "PRETTY_NAME=\"Ubuntu 24.04.3 LTS\""..., 400) = 400
     ```
 
-    Этот вызов `write` пытается записать 400 байт прочитанных данных в **файловый дескриптор 1**, который по умолчанию соответствует **стандартному выводу (stdout)**.
+    Этот вызов `write` пытается записать 400 байт прочитанных данных в **файловый дескриптор 1**, который по умолчанию соответствует **stdout**.
 
 2.  **Перенаправление в `/dev/null`**:
 
